[package]
name = "lua_cdtk"
version = "0.1.0"
edition = "2021"
authors = ["Ilyas Taouaou (codotaku)"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CodesOtakuYT/lua_cdtk"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorize = { version = "*" }
mlua = { version = "*", features = ["luajit", "vendored"] }
num = "*"
